--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,27 +1,53 @@
+@import "./custom-styles.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer base {
+  * {
+    box-sizing: border-box;
+    -webkit-tap-highlight-color: transparent;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@layer utilities {
+  .pb-safe {
+    padding-bottom: env(safe-area-inset-bottom);
+  }
+}
+
+@layer components {
+  .text-gradient-hero {
+    @apply bg-gradient-to-r from-[#a0e65d] to-[#79cc52] bg-clip-text font-bold text-transparent;
+  }
+
+  .bg-glass {
+    @apply bg-gray-300 bg-clip-padding backdrop-filter backdrop-blur-sm bg-opacity-30 border border-gray-100;
+  }
+
+  .moving-gradient {
+    background: linear-gradient(
+      -45deg,
+      #ff0099,
+      #2200ff,
+      #ae00ff,
+      #ff0099,
+      #ae00ff
+    );
+    background-size: 400% 400%;
+    animation: gradient 5s ease infinite;
+  }
+
+  @keyframes gradient {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
 }
